Kleopatra: Filtering keys doesn't work anymore
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Jul 15 2022, 5:31 PM
Tags

Description

Filtering keys by some text is broken in the certificate list and in the certificate input field (e.g. Encrypt to others).

How to reproduce:

  • Filtering in certificate list:
    1. Enter some text in the "Search..." input field above the certificate list

      Expected result: Only certificates matching the search pattern are displayed

      Actual result: All certificates are displayed
  • Entering a certificate in an Encrypt to others input field
    1. Open the Recipients tab in the Notepad
    2. Enter some text in an Encrypt to others input field, so that only a single certificate matches
    3. Press Return

      Expected result: The matching certificate is displayed

      Actual result: "Multiple matching certificates or groups found" is displayed

Event Timeline

ikloecker triaged this task as High priority.
ikloecker added projects: kleopatra, Restricted Project.
ikloecker changed the task status from Open to Testing.Jul 15 2022, 5:50 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: Restricted Project.

Fixed.

ebo claimed this task.
ebo added a subscriber: ebo.

works

ebo removed a project: Restricted Project.Sep 21 2022, 4:05 PM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 1:52 PM