src/view/keytreeview.cpp
@@ -363,7 +363,7 @@ void KeyTreeView::init()
         }
     }
 
-    m_proxy->setFilterFixedString(m_stringFilter);
+    m_proxy->setFilterRegularExpression(QRegularExpression::escape(m_stringFilter));
     m_proxy->setKeyFilter(m_keyFilter);
     m_proxy->setSortCaseSensitivity(Qt::CaseInsensitive);
 
@@ -613,7 +613,7 @@ void KeyTreeView::setStringFilter(const QString &filter)
         return;
     }
     m_stringFilter = filter;
-    m_proxy->setFilterFixedString(filter);
+    m_proxy->setFilterRegularExpression(QRegularExpression::escape(filter));
     Q_EMIT stringFilterChanged(filter);
 }
 
